Remove link para signup

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -30,9 +30,9 @@
                                 {% endif %}
                             {% endif %}
 
-                            <h2 class="h2">Ainda não tem uma conta? Registre-se.</h2>
-                            <p>Após o cadastro, você poderá adicionar suas indicações.</p>
-                            <a href="{% url 'signup' %}" class="btn btn-rounded">Cadastre-se</a>
+                            <h2 class="h2">Área restrita</h2>
+                            <p>Se você é um parceiro, solicite o seu login.</p>
+
                         </div>
                     </div>
                     <!-- Login Content End -->
