--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -18,9 +18,9 @@
                                 </div>
                             {% endif %}
 
-                            <h2 class="h2">Ainda não tem uma conta? Registre-se.</h2>
-                            <p>Após o cadastro, nossa equipe irá liberar seu acesso ao sistema.</p>
-                            <a href="{% url 'signup' %}" class="btn btn-rounded">Register Now</a>
+                            <h2 class="h2">Área restrita</h2>
+                            <p>Se você é um parceiro, solicite o seu login.</p>
+
                         </div>
                     </div>
                     <!-- Login Content End -->
