Configura login redirect

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -60,7 +60,7 @@
                         <div class="m-account--form">
                             <!-- Logo Start -->
                             <div class="logo">
-                                <img src="{% static 'images/casa-conceito-logo.png' %}" alt="">
+                                <img src="{% static 'images/zumaq-logo.png' %}" alt="">
                             </div>
                             <!-- Logo End -->
 
