--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -24,7 +24,7 @@
                         <div class="m-account--form">
                             <!-- Logo Start -->
                             <div class="logo" style="margin: 0px;">
-                                <img src="{% static 'images/casa-conceito-h-logo.png' %}" alt="">
+                                <img src="{% static 'images/zumaq-logo.png' %}" alt="">
                             </div>
                             <!-- Logo End -->
                         </div>
