--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -32,7 +32,7 @@
                         <div class="m-account--form">
                             <!-- Logo Start -->
                             <div class="logo">
-                                <img src="{% static 'assets/img/logo.png' %}" alt="">
+                                <img src="{% static 'images/zumaq-logo.png' %}" alt="">
                             </div>
                             <!-- Logo End -->
 
