Melhora templates Product Create Product Update

--- a/templates/products/update.html
+++ b/templates/products/update.html
@@ -80,7 +80,12 @@
                 <span class="label-text col-md-3 col-form-label">Pago na China:</span>
 
                 <div class="col-md-9">
-                  {{  form.pago_na_china }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">¥</span>
+                    </div>
+                    {{  form.pago_na_china }}
+                  </div>
                 </div>
               </div>
 
@@ -88,7 +93,12 @@
                 <span class="label-text col-md-3 col-form-label">Reminmbi:</span>
 
                 <div class="col-md-9">
-                  {{ form.reminmbi }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">¥</span>
+                    </div>
+                    {{ form.reminmbi }}
+                  </div>
                 </div>
               </div>
 
@@ -96,7 +106,12 @@
                 <span class="label-text col-md-3 col-form-label">Dolar Cotado:</span>
 
                 <div class="col-md-9">
-                  {{ form.dolar_cotado }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">₨</span>
+                    </div>
+                    {{ form.dolar_cotado }}
+                  </div>
                 </div>
               </div>
 
@@ -104,7 +119,12 @@
                 <span class="label-text col-md-3 col-form-label">Impostos na China:</span>
 
                 <div class="col-md-9">
-                  {{ form.impostos_na_china }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">%</span>
+                    </div>
+                    {{ form.impostos_na_china }}
+                  </div>
                 </div>
               </div>
 
@@ -112,7 +132,12 @@
                 <span class="label-text col-md-3 col-form-label">Porcentagem importação:</span>
 
                 <div class="col-md-9">
-                  {{ form.porcentagem_importacao }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">%</span>
+                    </div>
+                    {{ form.porcentagem_importacao }}
+                  </div>
                 </div>
               </div>
 
@@ -120,7 +145,12 @@
                 <span class="label-text col-md-3 col-form-label">Coeficiente:</span>
 
                 <div class="col-md-9">
-                  {{ form.coeficiente }}
+                  <div class="input-group">
+                    <div class="input-group-prepend">
+                      <span class="input-group-text">%</span>
+                    </div>
+                    {{ form.coeficiente }}
+                  </div>
                 </div>
               </div>
             </div>
