Ajustes de Identidade nos templaes

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- ==== Document Title ==== -->
-    <title>{% block title %}Casa Conceito{% endblock %}</title>
+    <title>{% block title %}Zumaq Partners{% endblock %}</title>
 
   <!-- ==== Document Meta ==== -->
   <meta name="author" content="Tiago Cordeiro">
