--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 
-{% block title %}Dashboard - Casa Conceito{% endblock %}
+{% block title %}Dashboard - Zumaq Partners{% endblock %}
 {% block page-title %}Dashboard{% endblock %}
 
 {% block breadcrumb %}
