--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load humanize %}
 
-{% block title %}Meu Perfil - Casa Conceito{% endblock %}
+{% block title %}Meu Perfil{% endblock %}
 {% block page-title %}Meu Perfil{% endblock %}
 
 {% block breadcrumb %}
