Configura cadastro de parceiros

--- a/templates/indicacao_detalhes.html
+++ b/templates/indicacao_detalhes.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load parceiros_extras %}
+{% load core_extras %}
 
 {% block title %}Dashboard - S.I.E.{% endblock %}
 {% block page-title %}Nova Indicação{% endblock %}
