--- a/templates/indicacao_list.html
+++ b/templates/indicacao_list.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% load parceiros_extras %}
+{% load core_extras %}
 
 {% block title %}Indicações - Casa Conceito{% endblock %}
 {% block page-title %}Indicações{% endblock %}
