Melhora UI e UX

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,7 +6,7 @@
     <div class="navbar--header">
         <!-- Logo Start -->
         <a href="{% url 'dashboard' %}" class="logo">
-            <img src="{% static "images/zumaq.png" %}" alt="Casa Conceito">
+            <img src="{% static "images/zumaq-230x60.png" %}" alt="CNC Zumaq">
         </a>
         <!-- Logo End -->
 
