Configura view e template para criação de parceiros. Mantem cadastro por enquanto.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -144,7 +144,7 @@
 
                 <ul>
                     <li>
-                        <a href="{% url 'parceiro_cadastro' %}">
+                        <a href="{% url 'parceiro_create' %}">
                             <i class="far fa-newspaper"></i>
                             <span>Adicionar</span>
                         </a>
