--- a/templates/parceiros/details.html
+++ b/templates/parceiros/details.html
@@ -25,10 +25,9 @@
         // update form count
         $('#id_product-TOTAL_FORMS').attr('value', count + 1);
         // update css
-        $('.input-group')[count].childNodes[1].className = 'col-lg-6 col-md-12 col-sm-12';
-        $('.input-group')[count].childNodes[3].className = 'col-lg-2 col-md-5 col-sm-5';
-        $('.input-group')[count].childNodes[5].className = 'col-lg-2 col-md-5 col-sm-5';
-        $('.input-group')[count].childNodes[7].className = 'col-lg-2 col-md-2 col-sm-2';
+        $('.input-group')[count].childNodes[1].className = 'col-lg-9 col-md-12 col-sm-12';
+        $('.input-group')[count].childNodes[3].className = 'col-lg-2 col-md-6 col-sm-6';
+        $('.input-group')[count].childNodes[5].className = 'col-lg-1 col-md-6 col-sm-6';
       });
     });
   </script>
@@ -41,44 +40,46 @@
       </div>
     </div>
 
+    {% if form.errors %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+      {{ form.errors }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    {% endif %}
+
+    {% if formset.errors %}
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{ formset.errors }}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+    </div>
+    {% endif %}
+
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        </div>
+      {% endfor %}
+    {% endif %}
+
     <div class="panel">
       <!-- Edit Product Start -->
       <div class="records--body">
         <div class="title">
-          <h6 class="h6">Detalhes</h6>
-          {% if form.errors %}
-            {{ form.errors }}
-          {% endif %}
-
-          {% if formset.errors %}
-            {{ formset.errors }}
-          {% endif %}
-
-          {% if messages %}
-            {% for message in messages %}
-              <div class="card-panel amber lighten-4">{{ message }}</div>
-            {% endfor %}
-          {% endif %}
+          <h6 class="h6">{{ parceiro.username }} - {{ parceiro.email }}</h6>
         </div>
 
 
 
         <form action="." method="POST">
           {% csrf_token %}
-{#          {{ form|crispy }}#}
-{#          <input type="text" name="parceiro" value="{{ parceiro.pk }}" class="form-control" disabled="">#}
-
-          <div class="row mb-4">
-            <div class="col-md-6 col-sm-12">
-              {{ parceiro.username }}
-            </div>
-            <div class="col-md-6 col-sm-12">
-              {{ parceiro.email }}
-            </div>
-          </div>
-
-
-
           {{ formset.management_form|crispy }}
 
           <legend class="lead">PRODUTOS</legend>
@@ -87,19 +88,15 @@
             {% for custom_item in formset %}
               <div id="item-{{ forloop.counter0 }}" class="row form-row spacer">
                 <div class="input-group">
-                    {{ custom_item.id }}
-                    {{ custom_item.parceiro }}
-                  <div class="col-lg-6 col-md-12 col-sm-12">
+                  {{ custom_item.id }}
+                  {{ custom_item.parceiro }}
+                  <div class="col-lg-9 col-md-12 col-sm-12">
                     {{ custom_item.produto|as_crispy_field }}
                   </div>
-                  <div class="col-lg-2 col-md-5 col-sm-5">
+                  <div class="col-lg-2 col-md-6 col-sm-6">
                     {{ custom_item.coeficiente|as_crispy_field }}
                   </div>
-                  <div class="col-lg-2 col-md-5 col-sm-5">
-{#                    {{ custom_item.parceiro|as_crispy_field }}#}
-{#                    <input type="hidden" name="parceiro" value="{{ parceiro.pk }}" class="form-control">#}
-                  </div>
-                  <div class="col-lg-2 col-md-2 col-sm-2" style="margin: 42px 0 0 0;">
+                  <div class="col-lg-1 col-md-6 col-sm-6" style="margin: 30px 0 0 0;">
                     {{ custom_item.DELETE|as_crispy_field }}
                   </div>
                 </div>
@@ -129,16 +126,13 @@
         <div class="input-group">
           {{ custom_item.id }}
           {{ custom_item.parceiro }}
-          <div class="col-lg-6 col-md-12 col-sm-12">
+          <div class="col-lg-9 col-md-12 col-sm-12">
             {{ formset.empty_form.produto|as_crispy_field }}
           </div>
-          <div class="col-lg-2 col-md-5 col-sm-5">
+          <div class="col-lg-2 col-md-6 col-sm-6">
             {{ formset.empty_form.coeficiente|as_crispy_field }}
           </div>
-          <div class="col-lg-2 col-md-5 col-sm-5">
-{#            {{ formset.empty_form.parceiro|as_crispy_field }}#}
-          </div>
-          <div class="col-lg-2 col-md-2 col-sm-2" style="margin: 42px 0 0 0;">
+          <div class="col-lg-1 col-md-6 col-sm-6" style="margin: 30px 0 0 0;">
             {{ formset.empty_form.DELETE|as_crispy_field }}
           </div>
         </div>
