--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -34,7 +34,7 @@
 
                         <p class="miniStats--caption text-blue">Leads</p>
                         <P><br></P>
-                        <a href="{% url 'indicacao_add' %}" class="btn btn-sm btn-outline-info">Adicionar Novo</a>
+                        <a href="#" class="btn btn-sm btn-outline-info">Adicionar Novo</a>
                     </div>
                 </div>
                 <!-- Mini Stats Panel End -->
@@ -50,7 +50,7 @@
 
 
                         <p class="miniStats--label text-white bg-orange">
-                            <a class="text-white" href="{% url 'indicacao_list' %}">
+                            <a class="text-white" href="#">
                                 <i class="fa fa-list"></i>
                                 <span>{{ indicacoes_ganhas }}</span>
                             </a>
@@ -62,7 +62,7 @@
 
                         <p class="miniStats--caption text-orange">Leads</p>
                         <br>
-                        <a href="{% url 'indicacao_list' %}" class="btn btn-sm btn-outline-warning">Indicações</a>
+                        <a href="#" class="btn btn-sm btn-outline-warning">Indicações</a>
                     </div>
                 </div>
                 <!-- Mini Stats Panel End -->
