--- a/templates/profile_update.html
+++ b/templates/profile_update.html
@@ -39,9 +39,7 @@
 
       <div class="profile-cover__info">
         <ul class="nav">
-          <li><strong>{{ indicacoes_qt }}</strong>Indicações</li>
-          <li><strong>{{ indicacoes_ganhas }}</strong>Indicações Ganhas</li>
-          <li><strong>{{ total_ganho|default_if_none:"0"|intcomma }}</strong>R$ Ganhos</li>
+          <li><strong>0</strong>Pedidos</li>
         </ul>
       </div>
     </div>
