Testes com mini chart spark no dashboard

--- a/templates/dashboard_demo.html
+++ b/templates/dashboard_demo.html
@@ -44,7 +44,7 @@
                 <!-- Mini Stats Panel Start -->
                 <div class="miniStats--panel">
                     <div class="miniStats--header bg-darker">
-                        <p class="miniStats--chart" data-trigger="sparkline" data-type="bar" data-width="4" data-height="30" data-color="#e16123">2,2,3,9,11,9,7,20,9,7,6,5,6,9,4,9,5,3,5,9,15,3</p>
+                        <p class="miniStats--chart" data-trigger="sparkline" data-type="bar" data-width="4" data-height="30" data-color="#e16123">{{ cny_spark_str }}</p>
 
                         <p class="miniStats--label text-white bg-orange">
                             <i class="fa fa-level-down-alt"></i>
