--- a/templates/parceiros/details.html
+++ b/templates/parceiros/details.html
@@ -83,7 +83,15 @@
 
         <form action="." method="POST">
           {% csrf_token %}
-          {{ form }}
+
+          <div>
+            <div class="row form-row spacer mb-4">
+              <div class="col-lg-12 col-md-12 col-sm-12">
+                {{ form }}
+              </div>
+            </div>
+          </div>
+
           {{ formset.management_form|crispy }}
 
           <legend class="lead">PRODUTOS</legend>
