--- a/templates/products/update.html
+++ b/templates/products/update.html
@@ -163,6 +163,16 @@
                   </div>
                 </div>
               </div>
+
+              <div class="form-group row">
+                <span class="label-text col-md-3 col-form-label">Produto Ativo:</span>
+
+                <div class="col-md-9">
+                  <div class="input-group">
+                    {{ form.active }}
+                  </div>
+                </div>
+              </div>
             </div>
             <!-- Tab Pane End -->
 
