--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -37,7 +37,7 @@
     {% if messages %}
       {% for message in messages %}
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {{ message }}
+        {{ message|safe }}
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
