--- a/templates/parceiros/details.html
+++ b/templates/parceiros/details.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block title %}Dashboard - S.I.E.{% endblock %}
+{% block title %}Parceiro detalhes - S.I.E.{% endblock %}
 {% block page-title %}Parceiro{% endblock %}
 
 {% block breadcrumb %}
