--- a/templates/parceiros/list.html
+++ b/templates/parceiros/list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}Dashboard - S.I.E.{% endblock %}
+{% block title %}Parceiros - S.I.E.{% endblock %}
 {% block page-title %}Parceiros{% endblock %}
 
 {% block breadcrumb %}
