--- a/templates/pedidos/pedido_aberto.html
+++ b/templates/pedidos/pedido_aberto.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% load core_extras %}
 
-{% block title %}Dashboard - S.I.E.{% endblock %}
-{% block page-title %}Máquinas{% endblock %}
+{% block title %}Pedido em aberto - S.I.E.{% endblock %}
+{% block page-title %}Pedido{% endblock %}
 
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'dashboard' %}">Dashboard</a></li>
