--- a/templates/products/list.html
+++ b/templates/products/list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% load core_extras %}
 
-{% block title %}Dashboard - S.I.E.{% endblock %}
+{% block title %}Produtos - S.I.E.{% endblock %}
 {% block page-title %}Produtos{% endblock %}
 
 {% block breadcrumb %}
